alignfull simpler fix

--- a/assets/scss/utilities/_alignment.scss
+++ b/assets/scss/utilities/_alignment.scss
@@ -35,14 +35,10 @@
 
 .alignfull {
 	clear: both;
-	width: var(--alignfull-width, 100%);
+	width: var(--alignfull-width, 100vw);
 	max-width: var(--alignfull-max-width, 100vw);
 	margin-right: var(--alignfull-margin-right, calc(50% - 50vw));
 	margin-left: var(--alignfull-margin-left, calc(50% - 50vw));
-}
-
-.content {
-	--alignfull-width: auto;
 }
 
 .alignvertical {
